# fitnesssyncer-bigquery-etl

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup_auth.py
.github/workflows/: etl.yml
src/: auth.py  client.py  load.py  main.py  transform.py
tests/: test_auth.py  test_client.py  test_load.py  test_main.py  test_transform.py
