[project]
name = "fitnesssyncer-bigquery-etl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.0",
    "google-cloud-storage>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
